--- a/css/style.css
+++ b/css/style.css
@@ -45,3 +45,79 @@ body {
   color: white;
   border: 1px solid var(--color-green-dark);
 }
+.navbar-default {
+  background: linear-gradient(
+    to left bottom,
+    var(--color-green-light),
+    var(--color-green-dark)
+  );
+  border-color: #55c57a;
+}
+
+.navbar-default .navbar-nav > li > a {
+  color: #fff;
+}
+
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:focus,
+.navbar-default .navbar-nav > .active > a:hover {
+  color: #339453;
+  background-color: #c4f0bc;
+  font-weight: bold;
+}
+
+.navbar-default .navbar-brand {
+  color: #fff;
+}
+
+.navbar-default .navbar-toggle .icon-bar {
+  background-color: #fff;
+}
+
+.navbar-default .navbar-toggle:hover {
+  background-color: #55c57a;
+}
+
+.navbar-default .navbar-toggle {
+  border-color: #fff;
+}
+
+.navbar-default .navbar-brand {
+  color: #fff;
+  background-color: transparent;
+  cursor: unset;
+}
+
+.navbar-default .navbar-brand:hover {
+  color: #fff;
+  background-color: transparent;
+}
+
+.navbar-default .navbar-brand:focus,
+.navbar-default .navbar-brand:hover {
+  color: #fff;
+  background-color: transparent;
+}
+
+.toggle:focus,
+.navbar-default .navbar-toggle:hover {
+  background-color: #c4f0bc;
+}
+
+.navbar-default .navbar-nav > li :focus,
+.navbar-default .navbar-nav > li :hover {
+  color: #7ed56f;
+  background-color: #fff;
+}
+
+.navbar-default .navbar-nav > li > a:focus,
+.navbar-default .navbar-nav > li > a:hover {
+  color: #7ed56f;
+  background-color: #fff;
+  background-color: transparent;
+}
+
+.navbar-nav > li:hover {
+  background-color: #fff;
+  border-bottom: 5px solid #000;
+}
